unpackaged/main/default/objects/Splash_Events__c/Splash_Events__c.object-meta.xml
<CustomObject>
    <description>Object that will hold event data syncing from Splash Events (third party vendor)</description>
    <label>Splash Events</label>
    <nameField>
        <label>Splash Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Splash Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>