unpackaged/main/default/objects/Splash_Events__c/fields/Event_Hashtag__c.field-meta.xml
<CustomField>
    <fullName>Event_Hashtag__c</fullName>
    <label>Event Hashtag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>