unpackaged/main/default/objects/Splash_Events__c/fields/Number_Invited__c.field-meta.xml
<CustomField>
    <fullName>Number_Invited__c</fullName>
    <description>Number of guests invited to an event</description>
    <label>Number Invited</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>