unpackaged/main/default/objects/Splash_Events__c/fields/Splash_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Splash_Event_ID__c</fullName>
    <description>This field will hold SplashThat extrnal ID</description>
    <externalId>true</externalId>
    <label>Splash Event ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>